# write_alembic

./: LICENSE  README.md  maya_mash_simple.py  write_abc.py
src/: CMakeLists.txt  partio_exchange.cpp  partio_exchange.h  write_alembic.cpp
